--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header{
     margin-bottom: 10px;
 }
 
-#grid-size-options span{
+span{
     font-family: 'Roboto', sans-serif;
     font-size: 1.25em;
 }
@@ -82,6 +82,33 @@ header{
     justify-content: space-between;
 }
 
+#current-mode-display{
+    margin-top: 10px;
+}
+
+button{
+    border: none;
+    padding: 10px 20px;
+    width: 100px;
+    height: 50px;
+    background-color: #587B7F;
+    color: var(--font-color);
+    transition: ease-in-out 0.1s;
+    border-radius: 15px;
+}
+
+button:hover{
+    border: 1px solid #587B7F;
+    background-color: var(--background-color);
+
+}
+
+button:active{
+    border: 1px solid #587B7F;
+    background-color: #E2C044;
+}
+
+
 @media(max-width: 600px){
     #main-grid{
         width: 400px;
@@ -95,14 +122,23 @@ header{
         height: 15px;
         width: 15px;
     }
+    #grid-controls{
+        flex-direction: column;
+        margin-top: 10px;
+    }
+    button{
+        width: 100%;
+        height: 20px;
+        padding: 10px;
+        margin-bottom: 2px;
+        padding: 3px 5px;
+        border-radius: 0px;
+    }
 }
 
 @media(max-width: 450px){
     #main-grid{
         width: 250px;
         height: 250px;
-    }
-    #grid-controls{
-        flex-direction: column;
     }
 }
